--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -12,6 +12,11 @@ img{
     clear:both;
     float:none !important; 
 }
+
+.auto-hint {
+	color: #AAA;
+}
+
 #button-bar {
     border-bottom: solid 0 #BBB;
     padding: 4px 0px;
@@ -223,13 +228,24 @@ img{
 	font-size: 14px;
 	margin-bottom: 4px;
 }
-#torrent_dialog a.link {
-	float:left;
+
+#torrent_dialog ul {
+	margin: 0;
+	padding: 0;
+}
+
+#torrent_dialog li {
+	list-style: none;
+	float: left;
 	clear: both;
+	margin: 2px;
+	padding: 0;
+}
+
+#torrent_dialog a.link {
 	text-decoration: none;
 	color: green;
 	font-size: 14px;
-	margin-bottom: 4px;
 }
 
 #torrent_dialog a.link:hover {
@@ -286,7 +302,7 @@ img.btn_close {
     position:relative; top:-19px; margin:0 auto;text-align:center;
 }
 #file-table {
-   border-right: 1px; width:100%; font-family: Verdana; font-size:8pt; 
+   border-right: 1px; width:100%; font-family: Arial; font-size:8pt; 
 }
 #file-table td tr{
     margin:0 0; padding:0 0;border: 0;
